--- a/amplify.yml
+++ b/amplify.yml
@@ -1,23 +1,32 @@
-version: 1
+version: 1.0
 backend:
   phases:
     build:
       commands:
-        - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
-frontend:
-  phases:
-    build:
-      commands:
+        - npm ci
         - npm run build
+        - npx cdk synth
+        - npx cdk deploy --outputs-file ./cdk-outputs.json
   artifacts:
-    baseDirectory: dist
+    baseDirectory: build
     files:
       - '**/*'
   cache:
     paths:
-      - .npm/**/*
       - node_modules/**/*
-  env:
-    variables:
-      REACT_APP_API_GATEWAY_URL: "`cat ./cdk-outputs.json | jq -r '.HelloWorldLambdaStack.ApiGatewayInvokeURL'`"
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm ci
+        - export REACT_APP_API_GATEWAY_URL=$(cat ./cdk-outputs.json | jq -r '.HelloWorldLambdaStack.ApiGatewayInvokeURL')
+    build:
+      commands:
+        - npm run build
+  artifacts:
+    baseDirectory: build
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
