--- a/amplify.yml
+++ b/amplify.yml
@@ -1,32 +1,20 @@
-version: 1.0
+version: 1
 backend:
   phases:
     build:
       commands:
-        - npm ci
-        - npm run build
-        - npx cdk synth
-        - npx cdk deploy --outputs-file ./cdk-outputs.json
-  artifacts:
-    baseDirectory: build
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+        - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
-    preBuild:
-      commands:
-        - npm ci
-        - if [ -f ./cdk-outputs.json ]; then jq -r '.HelloWorldLambdaStack.ApiGatewayInvokeURL' < ./cdk-outputs.json > ./src/amplify_outputs.json; fi
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: build
+    baseDirectory: dist
     files:
       - '**/*'
   cache:
     paths:
+      - .npm/**/*
       - node_modules/**/*
