--- a/amplify.yml
+++ b/amplify.yml
@@ -18,3 +18,6 @@ frontend:
     paths:
       - .npm/**/*
       - node_modules/**/*
+  environment:
+    variables:
+      API_ENDPOINT: $(jq -r '.custom.apiGatewayInvokeURL' amplify_output.json)
