amplify_outputの環境変数取り込み検証

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,6 +12,7 @@ frontend:
         - npm ci
         - curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
         - chmod +x ./jq
+        - if [ ! -f amplify_output.json ]; then echo "amplify_output.json not found"; exit 1; fi
         - export API_ENDPOINT=$(./jq -r '.custom.apiGatewayInvokeURL' amplify_output.json)
     build:
       commands:
